<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.profile.MyProfileFragment">

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/profileImageView"
        app:layout_constraintStart_toStartOf="@+id/profileImageView"
        app:layout_constraintTop_toBottomOf="@+id/profileImageView"
        tools:text="최영준" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/orange_yellow"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="@+id/userNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userNameTextView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/profileGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="logoutButton, userNameTextView, profileImageView, orderRecyclerView"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />

    <TextView
        android:id="@+id/emptyResultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_orders_text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/orderRecyclerView"
        app:layout_constraintEnd_toEndOf="@+id/orderRecyclerView"
        app:layout_constraintStart_toStartOf="@+id/orderRecyclerView"
        app:layout_constraintTop_toTopOf="@+id/orderRecyclerView"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/profileProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loginRequiredGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="loginButton, loginTextView"
        android:visibility="gone"
        tools:visibility="visible"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google_login_required_text"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>